# HelpDocApp

./: .gitignore  20240905012116_create_collections_table.sql  20240905012117_create_articles_table.sql  20240905012118_create_content_versions_table.sql  20240905012119_update_database.sql  Dockerfile  article.rs  collection.rs  data_processor.rs  docker-compose.yml  help-docs-ai-masterplan.md  meta_data_generation.rs  test_data.json
backend/: .gitignore  Cargo.toml  db_schema.rs  diesel.toml  failed_article_ids.txt  lib.rs  log4rs.yaml
backend/.sqlx/: query-3b472da401a4e5e604fed4f43ce92e8fff46c2846c492568d702558aa33deabc 2.json
backend/migrations/: 20240905012116_create_collections_table.sql  20240905012118_create_content_versions_table.sql
backend/migrations/2024-09-06-221536_create_initial_schema/: down.sql  up.sql
backend/migrations/2024-09-07-083320_add_helpscout_article_id_to_articles/: down.sql  up.sql
backend/migrations/2024-09-07-092049_add_embeddings_table/: down.sql  up.sql
backend/migrations/2024-09-08-190156_make_timestamps_and_version_non_nullable/: down.sql  up.sql
backend/migrations/2024-09-10-183658_modify_vector_db/: down.sql  up.sql
backend/migrations/2024-09-11-161148_create_article_chunks/: down.sql  up.sql
backend/migrations/2024-09-15-140555_article_and_column_metadata/: down.sql  up.sql
backend/migrations/2024-09-17-003450_update_keywords_bulletpoints/: down.sql  up.sql
backend/python_services/: embedding_service.py  requirements.txt
backend/src/: errors.rs  lib.rs  main.rs  schema.graphql  schema.rs
backend/src/data_processing/: converter.rs  data_processor.rs  fetcher.rs  generate_embedding.rs  mod.rs  storage.rs  sync_processor.rs
backend/src/data_processor/: api_client.rs  convert_html.rs  data_processor.rs  data_sync.rs  embedding.rs  embedding_service.rs  generate_embedding.rs  metadata.rs  mod.rs
backend/src/db/: mod.rs  vector_db.rs
backend/src/embedding/: mod.rs
backend/src/graphql/: context.rs  resolvers.rs
backend/src/job/: enqueue.rs  job_queue.rs  mod.rs  worker.rs
backend/src/jobs/: enqueue.rs  job_queue.rs  mod.rs  spawn.rs  worker.rs
backend/src/models/: article.rs  collection.rs  embedding.rs  job_info.rs  mod.rs  vector.rs
backend/src/models/articles/: article_chunk.rs  mod.rs  parse.rs  query.rs  update.rs
backend/src/routes/: ai_generation.rs  embed.rs  job.rs  mod.rs  parse.rs  search.rs  sync.rs  ws.rs
backend/src/services/: ai_service.rs  chat_server.rs  embedding_service.rs  metadata_generator_service.rs  mod.rs  search_service.rs
backend/src/services/ai/: ai_data_service.rs  generate_metadata.rs  generate_response.rs  mod.rs  ollama_load_balancer.rs
backend/src/services/chat/: chat_server.rs  chat_session.rs
backend/src/utils/: test_generator_balancer.rs
backend/tests/: api_client_tests.rs  article_tests.rs  convert_html_tests.rs  converter_tests.rs  embedding_tests.rs  fetcher_tests.rs  generate_embedding_tests.rs  storage_tests.rs
backend/tests/data_processing/: converter_tests.rs  fetcher_tests.rs  storage_tests.rs
(+41 files in other folders)
