[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full", "rt-multi-thread", "macros"] }
async-graphql = "6.0"
async-graphql-actix-web = "6.0"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
html2md = "0.2.14"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
scraper = "0.20.0"
tonic = "0.12.2"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
actix-cors = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
log4rs = "1.3.0"
thiserror = "1.0.63"
actix-web-codegen = "4.3.0"

[dev-dependencies]
mockito = "1.5.0"

[lib]
name = "backend"
path = "src/lib.rs"

